# markdf

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/markdf/: __init__.py  cli.py  renderer.py  theme.py  theme_preview.py  transform.py  webdoc.py
src/markdf/static/: base.css  document.html.j2
src/markdf/themes/default/: preview.html  style.css  theme.json
src/markdf/themes/ink/: preview.html  style.css  theme.json
src/markdf/themes/mint/: preview.html  style.css  theme.json
src/markdf/themes/paper/: preview.html  style.css  theme.json
tests/: test_renderer_templates.py  test_theme.py  test_transform.py
